# shengji-ai

./: .gitignore  CLAUDE.md  README.md  e2e_test.py  pyproject.toml  shengji-ai-CLAUDE.md  shengji-ai-README.md
shengji_ai/: __init__.py  base_agent.py  protocol.py  random_agent.py  rule_based_agent.py  run.py  run_game.py
shengji_ai/douzero/: __init__.py  douzero_agent.py  model.py
shengji_ai/mcts/: __init__.py  mcts_agent.py
shengji_ai/training/: __init__.py  trainer.py
tests/: __init__.py  test_random_agent.py  test_rule_based_agent.py
